--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jspdf": "^2.0.0",
+    "jspdf": "^3.0.0",
     "next": "14.1.4",
     "openai": "^4.46.0",
     "react": "^18",
