--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/jspdf": "^2.0.0",
+    "axios": "^1.8.1",
     "jspdf": "^3.0.0",
     "next": "14.1.4",
     "openai": "^4.46.0",
