--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/translate": "^8.5.1",
     "@types/jspdf": "^2.0.0",
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "jspdf": "^3.0.0",
     "next": "14.1.4",
     "openai": "^4.46.0",
