--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@google-cloud/storage": "^7.15.2",
     "@google-cloud/text-to-speech": "^5.8.1",
     "@google-cloud/translate": "^8.5.1",
+    "@google-cloud/vision": "^4.3.3",
     "@types/jspdf": "^2.0.0",
     "axios": "^1.8.1",
     "bullmq": "^5.41.8",
     "dotenv": "^16.4.7",
+    "formidable": "^3.5.2",
     "jspdf": "^3.0.0",
     "next": "14.1.4",
     "openai": "^4.7.1",
