--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/jspdf": "^2.0.0",
     "axios": "^1.8.1",
     "bullmq": "^5.41.8",
+    "chrono-node": "^2.7.8",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
     "jspdf": "^3.0.0",
+    "luxon": "^3.5.0",
     "next": "14.1.4",
     "openai": "^4.7.1",
     "react": "^18",
