--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
         "./*"
       ]
     },
-    "strictNullChecks": true
+    "strictNullChecks": false
   },
   "include": [
     "next-env.d.ts",
